# pre-commit-sphinx

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_sphinx/: build_docs.py  convert_bibliography.py
