[metadata]
name = pre_commit_sphinx
version = 0.0.1
description = Pre-commit hooks to check that sphinx docs build correctly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thclark/pre-commit-sphinx
author = Tom Clark (thclark)
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    Sphinx>=2.0.0
    sphinx-rtd-theme>=0.4.2
    sphinx-tabs>=1.1.10
    breathe>=4.11.1
    exhale>=0.2.1
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    build-docs = pre_commit_sphinx.build_docs:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
